2005-02-16  Sven Neumann  <sven@gimp.org>

	* app/core/gimpdrawable-desaturate.c: parallelized.

2005-02-16  Sven Neumann  <sven@gimp.org>

	* app/core/gimplayer.c (gimp_layer_transform_color): code cleanup.

2005-02-15  Sven Neumann  <sven@gimp.org>

	* app/paint-funcs/paint-funcs.[ch]: formatting.

2005-02-15  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimagemap.[ch]: changed GimpImageMapApplyFunc to
	be compatible with PixelProcessorFunc.

	* app/base/color-balance.[ch]
	* app/base/colorize.[ch]
	* app/base/gimplut.[ch]
	* app/base/hue-saturation.[ch]
	* app/base/threshold.[ch]: removed wrappers that used to
	shift parameters around to match GimpImageMapApplyFunc and
	PixelProcessorFunc signatures.

	* app/tools/gimpbrightnesscontrasttool.c
	* app/tools/gimpcolorbalancetool.c
	* app/tools/gimpcurvestool.c
	* app/tools/gimplevelstool.c
	* app/tools/gimpposterizetool.c
	* app/tools/gimpthresholdtool.c: changed accordingly.

	* tools/pdbgen/pdb/color.pdb: use pixel_region_process_parallel()
	for all color operations.

	* app/pdb/color_cmds.c: regenerated.

2005-02-15  Sven Neumann  <sven@gimp.org>

	* app/main.c (gimp_init_malloc): added a comment about the use of
	mallopt() and what could be done instead. Use the TILE_WIDTH and
	TILE_HEIGHT defines to determine the M_MMAP_THRESHOLD value.

2005-02-14  Sven Neumann  <sven@gimp.org>

	* app/base/gimphistogram.c: allocate histogram slots in one large
	block instead of multiple smaller chunks. Hide pointer arithmetic
	in macros.

2005-02-14  Sven Neumann  <sven@gimp.org>

	* app/dialogs/resolution-calibrate-dialog.c: fix for setups with
	multiple monitors on the same screen (bug #167339).

2005-02-14  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimppropwidgets.c: fixed gtk-doc comment.

2005-02-14  Sven Neumann  <sven@gimp.org>

	* app/config/gimprc-blurbs.h
	* app/dialogs/offset-dialog.c
	* plug-ins/common/displace.c
	* plug-ins/script-fu/scripts/rendermap.scm